<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/karper_beige">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/karper_brown"/>

    <TextView
        android:id="@+id/search_item_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/label_type" />

    <TextView
        android:id="@+id/search_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/search_item_type_label"
        android:text="@string/department" />

    <TextView
        android:id="@+id/search_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/name"
        android:layout_below="@id/search_item_type"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/search_item_dept_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/label_department"
        android:layout_below="@id/search_item_name"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/search_item_dept_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:layout_toRightOf="@id/search_item_dept_label"
        android:layout_alignTop="@id/search_item_dept_label"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/search_item_city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/label_city"
        android:layout_below="@id/search_item_dept_label"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/search_item_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city"
        android:layout_toRightOf="@id/search_item_city_label"
        android:layout_alignTop="@id/search_item_city_label"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"/>
</RelativeLayout>