<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@drawable/background_login"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/two_fish"
        android:src="@drawable/ic_fish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="-100dp"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:background="@drawable/background_input"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/email"
        android:layout_below="@id/two_fish"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:background="@drawable/background_input"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/emailField"
        android:layout_marginTop="10dp"
        android:imeOptions="actionSend"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_disagree"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/karper_brown"
        android:text="@string/title_forgot"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_disagree"
            android:text="@string/register" />

        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:background="@drawable/button_facebook"
            android:layout_weight="1"
            android:text="@string/login_facebook"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_margin="5dp" />

        </LinearLayout>

    <RelativeLayout
        android:id="@+id/overlay"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/overlay">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/active_with_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressbar"
            android:layout_centerInParent="true"
            android:paddingTop="100dp"
            android:textColor="@color/white"
            />
    </RelativeLayout>

</RelativeLayout>