<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/karper_beige">

    <ImageView
        android:id="@+id/karper_icon"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:src="@drawable/carprules_logo"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/karper_icon">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/button_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_title_home"
            android:textColor="@color/karper_brown"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/actionbar_color_end"/>

        <TextView
            android:id="@+id/button_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_title_search"
            android:textColor="@color/karper_brown"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/actionbar_color_end"/>

        <TextView
            android:id="@+id/button_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_title_help"
            android:textColor="@color/karper_brown"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/actionbar_color_end"/>

        <TextView
            android:id="@+id/button_privacy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_title_privacy"
            android:textColor="@color/karper_brown"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/actionbar_color_end"/>

        <TextView
            android:id="@+id/button_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_title_logout"
            android:textColor="@color/karper_brown"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/actionbar_color_end"/>

    </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/link_wepps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CarpRules V1.1 by Wepps"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>